--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typeorm": "^0.3.9"
   },
   "devDependencies": {
+    "@nestjs/axios": "^0.1.0",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
